--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Your Name</title>
+    <title>my portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
             <div class="col-md-9 col-12">
                 <h1 style="font-weight: 350;color: #3c4043;" class="display-5"><b>Hello World!..</b></h1>
                 <h4><b>This is my Website</b></h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel reprehenderit dolor expedita enim accusantium maiores neque commodi reiciendis? Suscipit neque explicabo ab odio! In pariatur quasi aliquid nesciunt quae.</p>
+                <p>this is my website my first portfolio and its GREEEAAATTT!!!!!!!!!</p>
 
                 <a href="mailto:geetikasejwalmon@gmail.com" class="btn btn-pink m-0 btn-md"><i class="fa fa-check" aria-hidden="true"></i>&nbsp; YES, I'M AVAILABLE FOR HIRE</a>
                 <br><br><br>
